# ComfyUI-ListHelper

./: .gitignore  ExampleModel.txt  README.md  SIMPLE_PROMPT_LIST_GUIDE.md  __init__.py  chinese_tools.py  gguf_inference.py  json_prompt_extractor.py  model_downloader.py  model_templates.json  models.json  nodes.py  openai_helper.py  openrouter_llm.py  person_feature_extractor.py  photo_magazine_generator.py  pyproject.toml  qwen_inference.py  requirements.txt  show_text.py  test_qwen_node.py
.github/workflows/: publish_action.yml
DesignPrompt/: README.md
Develop/: replace_chinese_messages.py
Example/: AllNodes.json  AudioListExample.json  ExampleWanFantasyTalkingEnglish.json  FanstasyTalkingLoopTest.json  ImageToPromptBasic.json  ImageToPromptExample.json  ModelDownloader.json  MultiTalk16VFI.json  MultiTalkIndexTTS.json  PhotoWithAudio.json  PromptListExample.json  QwenLayerToPSD.json  SimpleWildCard.json  StratAndEnd.json  ZimageDefault.json  ZimageDefaultGGUF.json
Prompt/: simple_prompt_list.md
WildCard/Basic/: 169.txt  age.txt  backsence.txt  contory.txt  earring-visibility.txt  earring.txt  eye_shape.txt  garter-tights.txt  grid.txt  hairsize.txt  hh.txt  mate.txt  realface_skin.txt  shoeme.txt  shoes.txt  wetdry.txt  years.txt
locales/: README.md
locales/en/: main.json  nodeDefs.json
locales/zh/: main.json  nodeDefs.json
locales/zh-TW/: main.json  nodeDefs.json
modeldata/: deepseek.json  default.json  gemini.json  openai.json
web/js/: modelDownloader.js  showText.js
wildcard/basic/: RandomPose-light.txt  bodytype.txt  breasts.txt  camerafull.txt  clothestight.txt  cm.txt  colors5.txt  expression.txt  eye_effect.txt  eye_quality.txt  eyecolor.txt  eyeiled.txt  face.txt  hairlong.txt  headwear.txt  light.txt  neck.txt  pretit.txt  sex.txt  socks.txt  tt-clothes.txt
