[project]
name = "Listhelper"
description = "The ListHelper collection is a comprehensive set of custom nodes for ComfyUI that provides powerful list manipulation capabilities. This collection includes audio processing, text splitting, and number generation tools for enhanced workflow automation.And OpenRouter API Function"
version = "1.0.8"
license = {file = "LICENSE"}
dependencies = ["regex"]

[project.urls]
Repository = "https://github.com/dseditor/ComfyUI-ListHelper"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "dseditor"
DisplayName = "ComfyUI-ListHelper"
Icon = ""
includes = []
